# rust-poly

./: .gitignore  .gitmodules  0.5 breakig changes.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  TODO.md  cliff.toml  clippy.toml  deny.toml  package-lock.json  package.json
benches/: bench.rs
crates/api2/: Cargo.toml  README.md
crates/api2/src/: aliases.rs  base.rs  errors.rs  impl_storage.rs  impl_univariate.rs  lib.rs  num.rs  root_finders.rs  roots.rs  scalar_traits.rs  storage_traits.rs
crates/api2/src/impl_univariate/: inner.rs  traits.rs
crates/api2/src/root_finders/: aberth_ehrlich.rs  errors.rs  initial_guess.rs
devops/: _lib.nu  ci.nu  clean-all.nu  dev-setup.nu  flamegraph.nu  lint.nu  release.nu
examples/: filter_design.rs  initial_guesses.rs  tuning.rs
fpcore/: README.md  sympy_to_fpcore.py
fpcore/functions/: quad.py  quad_minus_im.rs  quad_minus_im.txt  quad_minus_re.rs  quad_minus_re.txt  quad_plus_im.rs  quad_plus_im.txt  quad_plus_re.rs  quad_plus_re.txt
licenses/rulinalg/: LICENSE.md
src/: __util.rs  array_util.rs  base.rs  bessel.rs  casting_util.rs  complex_util.rs  error.rs  impl_num.rs  indexing.rs  lib.rs  linalg_util.rs  num_util.rs  poly.rs  poly2.rs  roots.rs  scalar.rs  storage.rs  util.rs
src/__util/: casting.rs  complex.rs  doc_macros.rs  float.rs  linalg.rs  luts.rs  test.rs  testing.rs
src/base/: roots.rs
src/poly/: base.rs  calculus.rs  conversions.rs  impl_num.rs  indexing.rs  internals.rs  roots.rs  special_funcs.rs
src/poly/roots/: all_roots.rs  eigenvalue.rs  initial_guess.rs  iterative.rs  many_roots.rs  multiroot.rs  single_root.rs
src/poly/roots/all_roots/: aberth_ehrlich.rs
src/poly/roots/eigenvalue/: francis_qr.rs
src/poly/roots/iterative/: halley.rs  naive.rs  newton.rs
src/poly/roots/multiroot/: aberth_ehrlich.rs
src/poly/roots/single_root/: halley.rs  naive.rs  newton.rs
src/poly2/: aliases.rs  poly_base.rs  roots.rs  roots_base.rs
src/storage/: impl_storage.rs
src/util/: __testing.rs  big_float.rs  casting.rs  complex.rs  doc_macros.rs  iterator.rs  linalg.rs  luts.rs  vec.rs
src/util/big_float/: add.rs  cmp.rs  conv.rs  div.rs  mul.rs  pow.rs
tests/: integration.rs  integration_test.rs  random.rs  random_test.rs  stability.rs
