[package]
name = "rust-poly"
description = "Numeric manipulation of real and complex polynomials."
version = "0.1.2"
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/rust-poly/latest/rust_poly/"
# TODO:
homepage = "https://github.com/PanieriLorenzo/rust-poly"
repository = "https://github.com/PanieriLorenzo/rust-poly"
readme = "README.md"
keywords = ["mathematics", "numerics", "polynomial", "solver"]
categories = ["Math"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.15"
num-complex = "0.4.3"
duplicate = "1.0.0"
nalgebra = "0.32.3"
divrem = "1.0.0"
itertools = "0.11.0"

[dev-dependencies]
rand = "0.8.5"
