[package]
name = "rust-poly"
description = "Numeric manipulation of real and complex polynomials."
version = "0.2.0"
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/rust-poly/latest/rust_poly/"
# TODO:
homepage = "https://github.com/PanieriLorenzo/rust-poly"
repository = "https://github.com/PanieriLorenzo/rust-poly"
readme = "README.md"
keywords = ["mathematics", "numerics", "polynomial", "solver"]
categories = ["mathematics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# num-traits = "0.2.15"
# num-complex = "0.4.3"
nalgebra = "0.32.3"
divrem = "1.0.0"
itertools = "0.12.1"
anyhow = "1.0.75"
num = "0.4.1"
numeric_constant_traits = "0.1.0"

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"

[[bench]]
name = "bench"
harness = false
