[package]
name = "rust-poly"
description = "Numeric manipulation of real and complex polynomials."
version = "0.3.0"
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/rust-poly/latest/rust_poly/"
# TODO:
homepage = "https://github.com/PanieriLorenzo/rust-poly"
repository = "https://github.com/PanieriLorenzo/rust-poly"
readme = "README.md"
keywords = ["mathematics", "numerics", "polynomial", "solver"]
categories = ["mathematics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.33.0"
itertools = "0.13.0"
anyhow = "1.0.75"
num = "0.4.1"
thiserror = "1.0.61"
fastrand = "2.1.0"
log = "0.4.21"
ethnum = "1.5.0"
softfloat = "1.0.0"


[dev-dependencies]
criterion = "0.5.1"
fastrand = "2.1.0"
plotly = { version = "0.9.0", features = ["kaleido"] }
simple_logger = "5.0.0"

[[bench]]
name = "bench"
harness = false

[profile.bench]
debug = true
